# ddb-local-rs

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  gradle.properties  settings.gradle.kts
.github/workflows/: ci.yml
ddb-local/: Cargo.toml  README.md  build.gradle.kts  smithy-build.json
ddb-local/src/: backend.rs  lib.rs  main.rs
docs/: ADDING_A_NEW_OPERATION.md  TESTING_AGAINST_DYNAMODB_LOCAL.md  TESTING_DESIGN.md
server-sdk/: Cargo.toml
server-sdk/src/: constrained.rs  error.rs  input.rs  lib.rs  mimes.rs  model.rs  operation.rs  operation_shape.rs  output.rs  protocol_serde.rs  service.rs  types.rs  unconstrained.rs
server-sdk/src/protocol_serde/: shape_archival_summary.rs  shape_attribute_definition.rs  shape_attribute_definitions.rs  shape_attribute_list.rs  shape_attribute_map.rs  shape_attribute_name_list.rs  shape_attribute_updates.rs  shape_attribute_value.rs  shape_attribute_value_list.rs  shape_attribute_value_update.rs  shape_billing_mode_summary.rs  shape_binary_set.rs  shape_binary_set_attribute_value.rs  shape_capacity.rs  shape_conditional_check_failed_exception.rs  shape_consumed_capacity.rs  shape_create_table.rs  shape_create_table_output.rs  shape_expected_attribute_map.rs  shape_expected_attribute_value.rs  shape_expression_attribute_name_map.rs  shape_expression_attribute_value_map.rs  shape_get_item.rs  shape_get_item_output.rs  shape_global_secondary_index.rs  shape_global_secondary_index_description.rs  (+44 more)
smithy/: build.gradle.kts  extract_minimal.py  smithy-build.json
smithy/model/: dynamo.json.bak  main.smithy
